--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
         </div>
 
         <section class=" mx-auto max-w-[1170px] mt-18 mb-32 ">
-            <div class="bg-[url(/images/banner.png)] h-[550px] justify-items-center  ">
+            <div class="bg-[url(../images/banner.png)] h-[550px] justify-items-center  ">
                 <h1 class="text-7xl leading-20 text-white text-center pt-28">We Provide Effective <br> Legal Solutions
                 </h1>
                 <p class="text-white text-center mt-11">There are many variations of passages of Lorem Ipsum available,
                     but the majority <br> have suffered alteration in some form, by injected humour.</p>
 
                 <div class="flex mt-8 gap-12">
-                    <input type="text" class="text-shadow-gray-500 w-96  h-15 bg-white rounded-lg" name="" id=""
+                    <input type="text" class="text-shadow-gray-500 w-96  h-15 p-4 bg-white rounded-lg" name="" id=""
                         placeholder="Search your services">
                     <button class="text-shadow-gray-500 w-36  h-15 bg-orange-300 rounded-lg">Search</button>
                 </div>
@@ -99,13 +99,13 @@
             </div>
 
         </section>
-        <section class="mt-32 border-2 mx-auto max-w-[1170px] mb-32">
+        <section class="mt-32 mx-auto max-w-[1170px] mb-32">
             <div class="text-center">
                 <h1 class="mt-32 text-5xl font-extrabold">What Our Client Say</h1>
                 <p class="mt-6 leading-6 mb-9">There are many variations of passages of Lorem Ipsum available, but the
                     majority have <br>suffered alteration in some form, by injected humour.</p>
 
-                <div class="bg-[url(/images/banner.png)] h-[550px] justify-items-center">
+                <div class="bg-[url(../images/banner.png)] h-[550px] justify-items-center">
                     <img src="images/" alt="">
                     <h1 class="text-white mt-10">Awlad Hossain</h1>
                     <h6 class="text-white">UIX Designer</h6>
@@ -187,8 +187,7 @@
                 </div>
                 <div class="grid gap-5">
                     <input type="text"
-                        class="text-shadow-gray-500 w-96  h-15 bg-gray-400 rounded-lg p-4 name="" id="" placeholder="
-                        Your Name">
+                        class="text-shadow-gray-500 w-96  h-15 bg-gray-400 rounded-lg p-4 name="" id="" placeholder="Your Name">
                     <input type="email" class="text-shadow-gray-500 w-96  h-15 bg-gray-400 rounded-lg p-4" name="" id=""
                         placeholder="Your Email">
                     <input type="text" class="text-shadow-gray-500 w-96  h-15 bg-gray-400 rounded-lg p-4" name="" id=""
