--- a/index.html
+++ b/index.html
@@ -62,36 +62,36 @@
                     <img class="w-10 h-10 mt-8 mb-16" src="images/Frame.png" alt="">
                 </div>
                 <div class="w-90 justify-items-center text-center bg-gray-200">
-                    <img class="w-16 h-16 mt-14" src="images/business.png" alt="">
-                    <h1 class="text-4xl font-semibold my-8 leading-7 text-gray-600">Business Law</h1>
+                    <img class="w-16 h-16 mt-14" src="images/criminal.png" alt="">
+                    <h1 class="text-4xl font-semibold my-8 leading-7 text-gray-600">Criminal Law</h1>
                     <p class="text-gray-400">There are many variations of <br> passages of Lorem Ipsum <br> available,
                         but the majority have <br> suffered alteration in some <br> form, by injected humour.</p>
                     <img class="w-10 h-10 mt-8" src="images/Frame.png" alt="">
                 </div>
                 <div class="w-90 justify-items-center text-center bg-gray-200">
-                    <img class="w-16 h-16 mt-14" src="images/business.png" alt="">
-                    <h1 class="text-4xl font-semibold my-8 leading-7 text-gray-600">Business Law</h1>
+                    <img class="w-16 h-16 mt-14" src="images/child.png" alt="">
+                    <h1 class="text-4xl font-semibold my-8 leading-7 text-gray-600">Child Support</h1>
                     <p class="text-gray-400">There are many variations of <br> passages of Lorem Ipsum <br> available,
                         but the majority have <br> suffered alteration in some <br> form, by injected humour.</p>
                     <img class="w-10 h-10 mt-8" src="images/Frame.png" alt="">
                 </div>
                 <div class="w-90 justify-items-center text-center bg-gray-200">
-                    <img class="w-16 h-16 mt-14" src="images/business.png" alt="">
-                    <h1 class="text-4xl font-semibold my-8 leading-7 text-gray-600">Business Law</h1>
+                    <img class="w-16 h-16 mt-14" src="images/education.png" alt="">
+                    <h1 class="text-4xl font-semibold my-8 leading-7 text-gray-600">Education Law</h1>
                     <p class="text-gray-400">There are many variations of <br> passages of Lorem Ipsum <br> available,
                         but the majority have <br> suffered alteration in some <br> form, by injected humour.</p>
                     <img class="w-10 h-10 mt-8" src="images/Frame.png" alt="">
                 </div>
                 <div class="w-90 justify-items-center text-center bg-gray-200">
-                    <img class="w-16 h-16 mt-14" src="images/business.png" alt="">
-                    <h1 class="text-4xl font-semibold my-8 leading-7 text-gray-600">Business Law</h1>
+                    <img class="w-16 h-16 mt-14" src="images/divorce.png" alt="">
+                    <h1 class="text-4xl font-semibold my-8 leading-7 text-gray-600">Divorce Law</h1>
                     <p class="text-gray-400">There are many variations of <br> passages of Lorem Ipsum <br> available,
                         but the majority have <br> suffered alteration in some <br> form, by injected humour.</p>
                     <img class="w-10 h-10 mt-8" src="images/Frame.png" alt="">
                 </div>
                 <div class="w-90 justify-items-center text-center bg-gray-200">
-                    <img class="w-16 h-16 mt-14" src="images/business.png" alt="">
-                    <h1 class="text-4xl font-semibold my-8 leading-7 text-gray-600">Business Law</h1>
+                    <img class="w-16 h-16 mt-14" src="images/tax.png" alt="">
+                    <h1 class="text-4xl font-semibold my-8 leading-7 text-gray-600">Tax Law</h1>
                     <p class="text-gray-400">There are many variations of <br> passages of Lorem Ipsum <br> available,
                         but the majority have <br> suffered alteration in some <br> form, by injected humour.</p>
                     <img class="w-10 h-10 mt-8" src="images/Frame.png" alt="">
@@ -106,7 +106,9 @@
                     majority have <br>suffered alteration in some form, by injected humour.</p>
 
                 <div class="bg-[url(../images/banner.png)] h-[550px] justify-items-center">
-                    <img src="images/" alt="">
+                    <div class=" p-3.5">
+                        <img class="mt-14" src="images/image.png" alt="">
+                    </div>
                     <h1 class="text-white mt-10">Awlad Hossain</h1>
                     <h6 class="text-white">UIX Designer</h6>
                     <p class="text-white mt-10 leading-6">Contrary to popular belief, Lorem Ipsum is not simply random
@@ -156,28 +158,28 @@
 
             <div class="max-w-[1000px] mx-auto grid grid-cols-2 mb-20 gap-10">
 
-                <div class=" grid grid-cols-2  text-center gap-3 ">
+                <div class=" grid grid-cols-2  text-center gap-3">
 
-                    <div class="p-3 bg-gray-200 rounded-lg  ">
-                        <img src="images/address.png" alt="">
+                    <div class="p-3 bg-gray-200 rounded-lg grid justify-items-center ">
+                        <img src="images/location.png" alt="">
                         <h2 class="text-2xl font-extrabold text-gray-500">Address</h2>
                         <p class="text-gray-400">A108 Adam Street, <br>
                             New York, NY 535022</p>
                     </div>
-                    <div class="p-3 bg-gray-200 rounded-lg  ">
-                        <img src="images/address.png" alt="">
+                    <div class="p-3 bg-gray-200 rounded-lg grid justify-items-center ">
+                        <img src="images/call.png" alt="">
                         <h2 class="text-2xl font-extrabold text-gray-500">Call Us</h2>
                         <p class="text-gray-400">+88 01750 00 00 00<br>
                             +88 01750 00 00 00</p>
                     </div>
-                    <div class="p-3 bg-gray-200 rounded-lg  ">
-                        <img src="images/address.png" alt="">
+                    <div class="p-3 bg-gray-200 rounded-lg grid justify-items-center">
+                        <img src="images/email.png" alt="">
                         <h2 class="text-2xl font-extrabold text-gray-500">Email Us</h2>
                         <p class="text-gray-400">info@gmail.com<br>
                             info@gmail.com</p>
                     </div>
-                    <div class="p-3 bg-gray-200 rounded-lg  ">
-                        <img src="images/address.png" alt="">
+                    <div class="p-3 bg-gray-200 rounded-lg grid justify-items-center ">
+                        <img src="images/time.png" alt="">
                         <h2 class="text-2xl font-extrabold text-gray-500">Working Hours</h2>
                         <p class="text-gray-400">Mon-Fri: 9AM to 5PM<br>
                             Sunday: 9AM to 1 PM</p>
