Work finished in website  done

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <section class="bg-gray-950 ">
             <div class="max-w-[1000px] mx-auto grid grid-cols-4 mb-20 gap-10 ">
                 <div>
-                    <h1 class="text-4xl font-extrabold text-white mb-4">Justice</h1>
+                    <img src="images/logo.png" alt="" class="mb-4">
                     <p class="text-white ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                         alteration in some form, by injected humour.</p>
                 </div>
@@ -230,7 +230,9 @@
                 </div>
                 <div class="text-white ">
                     <h1 class="text-3xl font-extrabold mb-4">Subscribe</h1>
-                    <p>Subscribe for our latest & Articles. We Won’t Give You Spam Mails</p>
+                    <p class="mb-4">Subscribe for our latest & Articles. We Won’t Give You Spam Mails</p>
+                    <input type="email" class="text-shadow-gray-500 w-64  h-15 bg-gray-400 rounded-lg p-4" name="" id=""
+                        placeholder="Email Address">
                 </div>
             </div>
         </section>
