--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
 
         <section class=" mx-auto max-w-[1170px] mt-18 mb-32 ">
-            <div class="bg-[url(../images/banner.png)] h-[550px] justify-items-center  ">
+            <div class="bg-[url('./images/banner.png')] h-[550px] justify-items-center  ">
                 <h1 class="text-7xl leading-20 text-white text-center pt-28">We Provide Effective <br> Legal Solutions
                 </h1>
                 <p class="text-white text-center mt-11">There are many variations of passages of Lorem Ipsum available,
@@ -105,7 +105,7 @@
                 <p class="mt-6 leading-6 mb-9">There are many variations of passages of Lorem Ipsum available, but the
                     majority have <br>suffered alteration in some form, by injected humour.</p>
 
-                <div class="bg-[url(../images/banner.png)] h-[550px] justify-items-center">
+                <div class="bg-[url('./images/banner.png')] h-[550px] justify-items-center">
                     <div class=" p-3.5">
                         <img class="mt-14" src="images/image.png" alt="">
                     </div>
