Work finished in website  done

--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
                         but the majority have <br> suffered alteration in some <br> form, by injected humour.</p>
                     <img class="w-10 h-10 mt-8" src="images/Frame.png" alt="">
                 </div>
-                <div class="w-90 justify-items-center text-center bg-gray-200">
+                <div class="w-90  justify-items-center text-center bg-gray-200">
                     <img class="w-16 h-16 mt-14" src="images/tax.png" alt="">
                     <h1 class="text-4xl font-semibold my-8 leading-7 text-gray-600">Tax Law</h1>
                     <p class="text-gray-400">There are many variations of <br> passages of Lorem Ipsum <br> available,
                         but the majority have <br> suffered alteration in some <br> form, by injected humour.</p>
-                    <img class="w-10 h-10 mt-8" src="images/Frame.png" alt="">
+                    <img class="w-10 h-10 mt-8 mb-16" src="images/Frame.png" alt="">
                 </div>
             </div>
 
