Work finished in footer button done

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
                 <div class="bg-[url('./images/banner.png')] h-[550px] justify-items-center">
                     <div class=" p-3.5">
-                        <img class="mt-14" src="images/image.png" alt="">
+                        <img class="mt-14" src="images/host.png" alt="">
                     </div>
                     <h1 class="text-white mt-10">Awlad Hossain</h1>
                     <h6 class="text-white">UIX Designer</h6>
@@ -202,7 +202,7 @@
             </div>
         </section>
 
-        <section class="bg-gray-950 ">
+        <section class="bg-gray-950 p-16 ">
             <div class="max-w-[1000px] mx-auto grid grid-cols-4 mb-20 gap-10 ">
                 <div>
                     <img src="images/logo.png" alt="" class="mb-4">
@@ -231,8 +231,11 @@
                 <div class="text-white ">
                     <h1 class="text-3xl font-extrabold mb-4">Subscribe</h1>
                     <p class="mb-4">Subscribe for our latest & Articles. We Won’t Give You Spam Mails</p>
-                    <input type="email" class="text-shadow-gray-500 w-64  h-15 bg-gray-400 rounded-lg p-4" name="" id=""
-                        placeholder="Email Address">
+                    <div class="relative">  
+                        <input type="email" class="text-shadow-gray-500 w-64  h-15 bg-gray-400 rounded-lg p-4 border-none" name="" id=""
+                            placeholder="Email Address">
+                            <img src="images/icon.png" alt="" class="absolute w-16 -inset-y-0.5 inset-48">
+                    </div>
                 </div>
             </div>
         </section>
